// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Тестирование компонента Button Отрисовка заблокированного компонента Button 1`] = `
<DocumentFragment>
  <button
    class="text text_type_button text_color_primary button undefined false "
    disabled=""
    type="button"
  >
    <p
      class="text undefined"
    />
  </button>
</DocumentFragment>
`;

exports[`Тестирование компонента Button Отрисовка компонента Button без текста 1`] = `
<DocumentFragment>
  <button
    class="text text_type_button text_color_primary button undefined false "
    type="button"
  >
    <p
      class="text undefined"
    />
  </button>
</DocumentFragment>
`;

exports[`Тестирование компонента Button Отрисовка компонента Button с индикацией загрузки 1`] = `
<DocumentFragment>
  <button
    class="text text_type_button text_color_primary button undefined loader "
    disabled=""
    type="button"
  >
    <img
      alt="Загрузка."
      class="loader_icon"
      data-cy="loader"
      src="loader.svg"
    />
  </button>
</DocumentFragment>
`;

exports[`Тестирование компонента Button Отрисовка компонента Button с текстом 1`] = `
<DocumentFragment>
  <button
    class="text text_type_button text_color_primary button undefined false "
    type="button"
  >
    <p
      class="text undefined"
    >
      Текст кнопки
    </p>
  </button>
</DocumentFragment>
`;
